--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "handlebars-dateformat": "^1.1.3",
+    "handlebars-helpers": "^0.10.0",
     "mongoose": "^7.1.0"
   },
   "devDependencies": {
