--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^7.0.7",
     "handlebars-dateformat": "^1.1.3",
     "handlebars-helpers": "^0.10.0",
+    "handlebars.numeral": "^0.2.0",
     "mongoose": "^7.1.0"
   },
   "devDependencies": {
