--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "handlebars.numeral": "^0.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.1.0",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
